feat: add update endpoint for leagues
